--- a/sales.html
+++ b/sales.html
@@ -11,6 +11,15 @@
         <header>
             <h1>Pat's Salmon Cookies: Sales Data</h1>
         </header>
+
+
+
+        <p>Hello World</p>
+        <ul id="sales">
+
+        </ul>
+
+
             <section id="dailySalesPerLocation">
 
             </section>
