--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <main>
 
         <header>
-            <!-- <img class  >      -->
+            <img class  
             <h1>PAT'S SALMON COOKIES</h1>
 
         </header>
         <body>
+        
             <section id="introAboutPatShop">
                 <h3>Welcome to Seattle's Best Salmon Cookies.</h3>
                 <p> Whether it is early in the morning or late in the evening!!</p>
@@ -26,10 +27,12 @@
                 <p> 6am - 8pm</p>
                 <p> Don't forget to follow us on social media!!</p>
             </section>
-           <!-- <script type="text/javascript" src=js/app.js></script>  --> 
+           <script type="text/javascript" src=js/app.js></script>  --> 
         </body>
         <footer>
 
         </footer>
     </main>
 </html>
+
+
