Adding few things

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <main>
 
         <header>
-            <img class  
+            <!-- <img class -->
             <h1>PAT'S SALMON COOKIES</h1>
 
         </header>
