--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <main>
 
         <header>
-            <!-- <img class -->
+            <section id="salmon">
+                <img src='img/salmon.png'>
+            </section>
+
             <h1>PAT'S SALMON COOKIES</h1>
 
         </header>
@@ -27,12 +30,38 @@
                 <p> 6am - 8pm</p>
                 <p> Don't forget to follow us on social media!!</p>
             </section>
-           <script type="text/javascript" src=js/app.js></script>  --> 
-        </body>
-        <footer>
 
-        </footer>
+            <section id="family">
+                <img src='img/family.jpg'>
+            </section>
+
+            <section id="shirt">
+                <img src='img/shirt.jpg'>
+            </section>
+
+            <section id="chinook">
+                <img src='img/chinook.jpg'>
+            </section>
+
+            <section id="cutter">
+                <img src='img/cutter.jpg'>
+            </section>
+
+            <section id="fish">
+                <img src='img/fish.jpg'>
+            </section>
+
+            <section id="frosted-cookie">
+                <img src='img/frosted-cookie.jpg'>
+            </section>
+
+           <script type="text/javascript" src=js/app.js></script> 
+        </body>
     </main>
+
+    <footer>
+
+    </footer>
 </html>
 
 
