--- a/sales.html
+++ b/sales.html
@@ -9,7 +9,9 @@
     <body>
     <main>
         <header>
+            <img src="img/salmon.png" width=250px;> 
             <h1>Pat's Salmon Cookies: Sales Data</h1>
+            <a href="index.html">Home</a>
         </header>
 
         <ul id="sales">
